kubernetes/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: nodejsapi
          image: greugreu/nodeapi:1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
