kubernetes/api/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/nodejs-example-default: "true"
    io.kompose.service: api
  name: api
spec:
  containers:
    - args:
        - npm
        - run
        - dev
      image: greugreu/nodeapi:1.0.4
      name: api
      ports:
        - containerPort: 3000
      resources: {}
  restartPolicy: OnFailure
status: {}
