kubernetes/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: 3000-tcp
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
