kubernetes/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
spec:
  ingressClassName: nodejs
  rules:
    - host: dev-nodeapi.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
            path: /
